--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: c
-script: bash -ex .travis-ci.sh
+install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/master/.travis-opam.sh
+script: bash -ex .travis-opam.sh
 env:
   - OCAML_VERSION=latest PACKAGE="io-page" 
   - OCAML_VERSION=4.01 PACKAGE="io-page"
