--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: c
-install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/master/.travis-opam.sh
-script: bash -ex .travis-opam.sh
+sudo: false
+services:
+  - docker
+install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/master/.travis-docker.sh
+script: bash -ex ./.travis-docker.sh
 env:
-  - OCAML_VERSION=4.02 PACKAGE="io-page" DEPOPTS="mirage-xen-ocaml"
-  - OCAML_VERSION=4.03 PACKAGE="io-page" DEPOPTS="mirage-xen-ocaml"
+  global:
+  - PACKAGE="io-page"
+  matrix:
+  - DISTRO="alpine-3.5"    OCAML_VERSION=4.02.3 DEPOPTS="mirage-xen-ocaml"
+  - DISTRO="debian-stable" OCAML_VERSION=4.03.0 DEPOPTS="mirage-xen-ocaml"
