Switch to jbuilder
Note this splits the opam package into 3:

- io-page: contains findlib io-page
- io-page-xen: contains findlib io-page-xen
- io-page-unix: contains findlib io-page-unix

Note the `PKG_CONFIG_PATH` is being set in the `io-page-xen.opam` file.
Without this we can't determine the Xen CFLAGS.

Signed-off-by: David Scott <dave@recoil.org>

--- a/io-page.opam
+++ b/io-page.opam
@@ -11,25 +11,13 @@ authors: [
 ]
 tags: ["org:mirage"]
 build: [
-  [ "./configure" "--prefix" prefix
-     "--%{mirage-xen-ocaml:enable}%-xen"
-  ]
-  [make]
+  [ "jbuilder" "subst"] {pinned}
+  [ "jbuilder" "build" "-p" name "-j" jobs ]
 ]
-install: [
-  [make "install"]
-  [make "js-install"]
-]
-remove: [
-  [make "js-uninstall"]
-  ["ocamlfind" "remove" "io-page"]
-]
+
 depends: [
-  "ocamlfind"
+  "jbuilder"  {build & >="1.0+beta9"}
+  "configurator" {build}
   "cstruct" {>= "2.0.0"}
-  "ounit" {test}
-]
-depopts: [
-  "mirage-xen-ocaml"
 ]
 available: [ocaml-version >= "4.02.3"]
