io-page-xen: prepend onto PKG_CONFIG_PATH
This uses the name OPAM_PKG_CONFIG_PATH suggested in #25, and combines
this with the real PKG_CONFIG_PATH in the lib/config/discover.ml program.

Signed-off-by: David Scott <dave@recoil.org>

--- a/io-page-xen.opam
+++ b/io-page-xen.opam
@@ -11,8 +11,8 @@ authors: [
 ]
 tags: ["org:mirage"]
 build: [
-  [ "jbuilder" "subst"] {pinned}
-  [ "env" "PKG_CONFIG_PATH=%{prefix}%/lib/pkgconfig" "jbuilder" "build" "-p" name "-j" jobs ]
+  [ "env" "OPAM_PKG_CONFIG_PATH=%{prefix}%/lib/pkgconfig" "jbuilder" "subst"] {pinned}
+  [ "env" "OPAM_PKG_CONFIG_PATH=%{prefix}%/lib/pkgconfig" "jbuilder" "build" "-p" name "-j" jobs ]
 ]
 
 depends: [
