--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,4 @@ env:
   - DISTRO="debian-stable" OCAML_VERSION=4.03.0 PACKAGE="io-page"
   - DISTRO="debian-stable" OCAML_VERSION=4.03.0 PACKAGE="io-page-unix"
   - DISTRO="debian-stable" OCAML_VERSION=4.03.0 PACKAGE="io-page-xen"
+  - DISTRO="alpine"        OCAML_VERSION=4.06.0 PACKAGE="io-page"
