--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,8 @@ env:
   global:
   - PINS="io-page:. io-page-unix:. io-page-xen:."
   matrix:
-  - DISTRO="alpine-3.5"    OCAML_VERSION=4.04.2 PACKAGE="io-page"
-  - DISTRO="alpine-3.5"    OCAML_VERSION=4.04.2 PACKAGE="io-page-unix"
-  - DISTRO="alpine-3.5"    OCAML_VERSION=4.04.2 PACKAGE="io-page-xen"
   - DISTRO="debian-stable" OCAML_VERSION=4.04.2 PACKAGE="io-page"
   - DISTRO="debian-stable" OCAML_VERSION=4.04.2 PACKAGE="io-page-unix"
   - DISTRO="debian-stable" OCAML_VERSION=4.04.2 PACKAGE="io-page-xen"
   - DISTRO="alpine"        OCAML_VERSION=4.06.0 PACKAGE="io-page"
+  - DISTRO="alpine"        OCAML_VERSION=4.07 PACKAGE="io-page"
