--- a/io-page-xen.opam
+++ b/io-page-xen.opam
@@ -1,25 +1,22 @@
-opam-version: "1.2"
-maintainer:   "anil@recoil.org"
-homepage:     "https://github.com/mirage/io-page"
-dev-repo:     "https://github.com/mirage/io-page.git"
-bug-reports:  "https://github.com/mirage/io-page/issues"
-license:      "ISC"
-authors: [
-  "Anil Madhavapeddy"
-  "Dave Scott"
-  "Thomas Gazagnaire"
-]
-tags: ["org:mirage"]
-build: [
-  [ "env" "OPAM_PKG_CONFIG_PATH=%{prefix}%/lib/pkgconfig" "jbuilder" "subst"] {pinned}
-  [ "env" "OPAM_PKG_CONFIG_PATH=%{prefix}%/lib/pkgconfig" "jbuilder" "build" "-p" name "-j" jobs ]
-]
-
+opam-version: "2.0"
+maintainer: "anil@recoil.org"
+authors: ["Anil Madhavapeddy" "Dave Scott" "Thomas Gazagnaire"]
+license: "ISC"
+tags: "org:mirage"
+homepage: "https://github.com/mirage/io-page"
+bug-reports: "https://github.com/mirage/io-page/issues"
+doc: "https://mirage.github.io/io-page/"
 depends: [
+  "ocaml" {>= "4.02.3"}
   "io-page"
-  "jbuilder"  {build & >="1.0+beta9"}
+  "dune" {build & >= "1.0"}
   "configurator" {build}
   "cstruct" {>= "2.0.0"}
   "mirage-xen-ocaml"
 ]
-available: [ocaml-version >= "4.02.3"]
+build: [
+  ["env" "OPAM_PKG_CONFIG_PATH=%{prefix}%/lib/pkgconfig" "dune" "subst"] {pinned}
+  [ "env" "OPAM_PKG_CONFIG_PATH=%{prefix}%/lib/pkgconfig"
+    "dune" "build" "-p" name "-j" jobs ]
+]
+dev-repo: "git+https://github.com/mirage/io-page.git"
