--- a/io-page-xen.opam
+++ b/io-page-xen.opam
@@ -10,7 +10,6 @@ depends: [
   "ocaml" {>= "4.02.3"}
   "io-page"
   "dune" {build & >= "1.0"}
-  "configurator" {build}
   "cstruct" {>= "2.0.0"}
   "mirage-xen-ocaml"
 ]
@@ -20,3 +19,8 @@ build: [
     "dune" "build" "-p" name "-j" jobs ]
 ]
 dev-repo: "git+https://github.com/mirage/io-page.git"
+synopsis: "Support for efficient handling of I/O memory pages on Xen"
+description: """
+IO pages are page-aligned, and wrapped in the `Cstruct` library to avoid
+copying the data contained within the page.
+"""
