--- a/io-page.opam
+++ b/io-page.opam
@@ -9,7 +9,6 @@ doc: "https://mirage.github.io/io-page/"
 depends: [
   "ocaml" {>= "4.02.3"}
   "dune" {build & >= "1.0"}
-  "configurator" {build}
   "cstruct" {>= "2.0.0"}
 ]
 build: [
@@ -17,3 +16,9 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 dev-repo: "git+https://github.com/mirage/io-page.git"
+synopsis: "Support for efficient handling of I/O memory pages"
+description: """
+IO pages are page-aligned, and wrapped in the `Cstruct` library to avoid
+copying the data contained within the page.
+"""
+
