only run unix tests in the right package

--- a/lib_test/dune
+++ b/lib_test/dune
@@ -4,7 +4,6 @@
 
 (alias
  (name runtest)
- (deps
-  (:< portable.exe))
- (action
-  (run %{<})))
+ (package io-page-unix)
+ (deps (:< portable.exe))
+ (action (run %{<})))
