--- a/io-page.opam
+++ b/io-page.opam
@@ -10,6 +10,7 @@ depends: [
   "ocaml" {>= "4.02.3"}
   "dune" {build & >= "1.0"}
   "cstruct" {>= "2.0.0"}
+  "bigarray-compat" {>= "1.0.0"}
 ]
 build: [
   ["dune" "subst"] {pinned}
