Remove unnecessary dependency on `configurator`
This pulled in a jbuilder dependency. We have used
`dune.configurator` since the v2.1.0 release.

Tighten up a few opam constraints while here, mainly using version
and removing unnecessary lower bounds and build tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,4 @@ env:
   - DISTRO="debian-stable" OCAML_VERSION=4.04 PACKAGE="io-page-xen"
   - DISTRO="alpine"        OCAML_VERSION=4.06 PACKAGE="io-page"
   - DISTRO="alpine"        OCAML_VERSION=4.07 PACKAGE="io-page"
+  - DISTRO="alpine"        OCAML_VERSION=4.08 PACKAGE="io-page"
