--- a/io-page-xen.opam
+++ b/io-page-xen.opam
@@ -8,8 +8,8 @@ bug-reports: "https://github.com/mirage/io-page/issues"
 doc: "https://mirage.github.io/io-page/"
 depends: [
   "ocaml" {>= "4.02.3"}
-  "io-page"
-  "dune" {build & >= "1.0"}
+  "dune"
+  "io-page" {=version}
   "cstruct" {>= "2.0.0"}
   "mirage-xen-ocaml"
 ]
