Move the javascript stubs to lib/ and add jsoo to dune
Also fix the name of the stub.

Co-authored-by: Jon Ludlam <jon@recoil.org>

--- a/lib/dune
+++ b/lib/dune
@@ -3,6 +3,7 @@
  (public_name io-page)
  (modules Io_page)
  (libraries cstruct bigarray-compat)
+ (js_of_ocaml (javascript_files io-page.js))
  (wrapped false))
 
 (library
