--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,9 @@ install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/ma
 script: bash -ex ./.travis-docker.sh
 env:
   global:
-  - PINS="io-page:. io-page-unix:. io-page-xen:."
+  - PINS="io-page.dev:."
   matrix:
   - DISTRO="debian-stable" OCAML_VERSION=4.04 PACKAGE="io-page"
-  - DISTRO="debian-stable" OCAML_VERSION=4.04 PACKAGE="io-page-unix"
-  - DISTRO="debian-stable" OCAML_VERSION=4.04 PACKAGE="io-page-xen"
   - DISTRO="alpine"        OCAML_VERSION=4.06 PACKAGE="io-page"
   - DISTRO="alpine"        OCAML_VERSION=4.07 PACKAGE="io-page"
   - DISTRO="alpine"        OCAML_VERSION=4.08 PACKAGE="io-page"
