--- a/lib/dune
+++ b/lib/dune
@@ -1,5 +1,6 @@
 (library
  (name io_page)
+ (modules io_page)
  (public_name io-page)
  (libraries cstruct bigarray-compat)
  (foreign_stubs
@@ -8,3 +9,9 @@
   (flags :standard))
  (js_of_ocaml
   (javascript_files io-page.js)))
+
+(library
+ (name io_page_unix)
+ (public_name io-page.unix)
+ (modules io_page_unix)
+ (libraries io_page))
