--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,14 @@ platform:
   - x86
 
 environment:
-  FORK_USER: ocaml
-  FORK_BRANCH: master
-  PACKAGE: io-page
-  CYG_ROOT: C:\cygwin64
+  global:
+    FORK_USER: ocaml
+    FORK_BRANCH: master
+    PACKAGE: io-page
+    CYG_ROOT: C:\cygwin64
+  matrix:
+    - OPAM_SWITCH: 4.08.0+msvc32c
+    - OPAM_SWITCH: 4.08.0+mingw64c
 
 install:
   - ps: iex ((new-object net.webclient).DownloadString("https://raw.githubusercontent.com/$env:FORK_USER/ocaml-ci-scripts/$env:FORK_BRANCH/appveyor-install.ps1"))
