update opam (dune >= 2.6), by @kit-ty-kate

--- a/io-page.opam
+++ b/io-page.opam
@@ -9,7 +9,7 @@ doc: "https://mirage.github.io/io-page/"
 depends: [
   "conf-pkg-config" {build}
   "ocaml" {>= "4.08.0"}
-  "dune"
+  "dune" {>= "2.6"}
   "cstruct" {>= "2.0.0"}
   "ounit" {with-test}
 ]
