--- a/io-page.opam
+++ b/io-page.opam
@@ -31,3 +31,4 @@ description: """
 IO pages are page-aligned, and wrapped in the `Cstruct` library to avoid
 copying the data contained within the page.
 """
+x-maintenance-intent: [ "(latest)" ]
